# ChessZ

./: CMakeLists.txt  ChessEngineConnector.hpp  main.cpp
